# hydraulic_engine

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/hydraulic_engine/: __init__.py
src/hydraulic_engine/epanet/: __init__.py  bin_handler.py  file_handler.py  inp_handler.py  models.py  runner.py
src/hydraulic_engine/swmm/: inp_handler.py  runner.py
