[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydraulic-engine"
version = "0.2.0"
description = "A Python package for managing hydraulic calculation actions: EPANET/SWMM simulations, RPT file imports, and more"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "BGEO", email = "info@bgeo.es"}
]
keywords = [
    "hydraulic",
    "epanet",
    "swmm",
    "water",
    "drainage",
    "simulation",
    "inp",
    "rpt"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "pyswmm>=2.0.0",
    "swmm-api>=0.4.60",
    "wntr>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "requests>=2.28.0",
    "pyproj>=3.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Giswater/hydraulic-engine"
Documentation = "https://github.com/Giswater/hydraulic-engine#readme"
Repository = "https://github.com/Giswater/hydraulic-engine.git"
Issues = "https://github.com/Giswater/hydraulic-engine/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.config", "*.json"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
